<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical"
    tools:context=".presentation.DetailScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/close_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_tic_vector" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_cart_vector" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="20dp"
        app:cardMaxElevation="0dp">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="160dp"
            android:layout_height="240dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/book_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/gt_sectra_fine_regular"
        android:gravity="center_horizontal"
        android:text="@string/sample_detail_text_name_of_book"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/j_k_rowling"
        android:textColor="@color/gray"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rate_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/rate_score_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/rate_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/rate_amount_text"
            android:textColor="@color/gray"
            android:textSize="14sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            style="@style/LeftCustomCardViewStyle"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            app:cardMaxElevation="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/price_text"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/RightCustomCardViewStyle"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/background_card"
            android:clickable="true"
            android:focusable="true"
            app:cardMaxElevation="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/free_preview"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24sp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/recommendation"
        android:textColor="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/item_detail" />

</LinearLayout>