<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_book"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/background_main"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            app:cardMaxElevation="0dp">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="70dp"
                android:layout_height="105dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_of_book_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/gt_sectra_fine_regular"
                android:maxLines="2"
                android:text="@string/sample_book_name_text"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_weight="1"
                android:id="@+id/author_name_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/j_k_rowling"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_marginBottom="6dp"
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/price_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/price_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rate_score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/rate_score_text"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/rate_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="48dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/rate_amount_text"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>